stuff for testing firebase

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/application.js"></script>
     <script src="cordova.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
 
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
