relabling and adding angularfire

--- a/www/index.html
+++ b/www/index.html
@@ -12,12 +12,10 @@
     <script src="js/application.js"></script>
     <script src="cordova.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
 
   </head>
-  <body ng-app="starter" animation="slide-left-right-ios7">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
+  <body ng-app="carnatic" animation="slide-left-right-ios7">
     <ion-nav-bar class="bar-stable nav-title-slide-ios7">
       <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
         Back
