--- a/www/index.html
+++ b/www/index.html
@@ -11,15 +11,17 @@
     <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
     <script src="cordova.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/application.js"></script>
   </head>
 
   <body ng-app="carnatic">
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Carnatic</h1>
-      </ion-header-bar>
-      <ion-nav-view></ion-nav-view>
+      <ion-nav-bar>
+        <ion-nav-back-button class="button-clear">
+          <i class="ion-arrow-left-c"></i> Back
+        </ion-nav-back-button>
+      </ion-nav-bar>
+      <ion-nav-view animation="slide-left-right"></ion-nav-view>
     </ion-pane>
   </body>
 </html>
