--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="cordova.js"></script>
     <script src="js/application.js"></script>
   </body>
