changed syntax for repeaters and nested repeaters works now

--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,12 @@
     </ion-pane>
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="cordova.js"></script>
+
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/firebase/angularfire.min.js"></script>
+    <script src="lib/d3/d3.v3.min.js" charset="utf-8"></script>
+
     <script src="js/application.js"></script>
   </body>
 </html>
