korvai detail, improvements

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,8 @@
     <script src="cordova.js"></script>
 
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
+
     <script src="lib/firebase/firebase.js"></script>
     <script src="lib/firebase/angularfire.min.js"></script>
     <script src="lib/d3/d3.v3.min.js" charset="utf-8"></script>
