sharing data between views correctly (I think)

--- a/www/index.html
+++ b/www/index.html
@@ -21,13 +21,13 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
 
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
-
     <script src="lib/firebase/firebase.js"></script>
     <script src="lib/firebase/angularfire.min.js"></script>
+
+    <script src="lib/jquery/jquery-1.11.2.min.js"></script>
     <script src="lib/d3/d3.v3.min.js" charset="utf-8"></script>
     <script src="lib/jquery-autosize/jquery.autosize.min.js"></script>
+    <script src="lib/crypto-js/md5.js"></script>
 
     <script src="js/application.js"></script>
   </body>
