--- a/www/shared/Sidemenu/menu.html
+++ b/www/shared/Sidemenu/menu.html
@@ -29,6 +29,9 @@
         <ion-item nav-clear menu-close href="#/app/account">
           Account
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/search">
+          Search Users
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
