--- a/www/index.html
+++ b/www/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Carnatic App</title>
 
-    <link href="/public/ionic.app.min.css" rel="stylesheet">
+    <link href="public/ionic.app.min.css" rel="stylesheet">
+
+    <!-- fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400italic' rel='stylesheet' type='text/css'>
+    
+    <!-- plugin css files -->
+    <link href="assets/lib/jquery.atwho/dist/css/jquery.atwho.min.css" rel="stylesheet">
   </head>
 
-  <body ng-app="carnatic">
+  <body ng-app="carnatic" ng-strict-di>
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
 
     <script src="assets/lib/ionic/js/ionic.bundle.min.js"></script>
@@ -19,9 +25,11 @@
 
     <script src="assets/lib/jquery/dist/jquery.min.js"></script>
     <script src="assets/lib/d3/d3.min.js" charset="utf-8"></script>
-    <script src="assets/lib/jquery-autosize/jquery.autosize.min.js"></script>
     <script src="assets/lib/crypto-js/md5.js"></script>
+    <script src="assets/lib/angular-contenteditable/angular-contenteditable.js"></script>
+    <script src="assets/lib/Caret.js/dist/jquery.caret.min.js"></script>
+    <script src="assets/lib/jquery.atwho/dist/js/jquery.atwho.min.js"></script>
 
-    <script src="/public/application.js"></script>
+    <script src="public/application.js"></script>
   </body>
 </html>
