--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,8 @@
 
     <!-- fonts -->
     <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     
     <!-- plugin css files -->
     <link href="lib/jquery.atwho/dist/css/jquery.atwho.min.css" rel="stylesheet">
